# EpubtoPDF

./: README.md  requirements.txt  run.bat  setup.cfg
src/epubtopdf/: __init__.py  converter.py  gui.py  main.py
