[metadata]
name = epubtopdf
version = 1.0.0
author = EPUB to PDF Converter Team
author_email = contact@epubtopdf.example
description = A Python GUI application for converting EPUB files to PDF format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dadebr/EpubtoPDF
project_urls =
    Bug Reports = https://github.com/dadebr/EpubtoPDF/issues
    Source = https://github.com/dadebr/EpubtoPDF
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business :: Office Suites
    Topic :: Text Processing :: General
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    ebooklib>=0.18
    reportlab>=4.0.7
    weasyprint>=62.3
    fpdf2>=2.7.8
    tqdm>=4.66.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    epubtopdf = epubtopdf.main:main

gui_scripts =
    epubtopdf-gui = epubtopdf.gui:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
